--- a/src/bankapplication/BankForm.form
+++ b/src/bankapplication/BankForm.form
@@ -278,6 +278,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Show Graph"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGraphActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
